# MultiBagger_StockAnalyer

./: .env  Dockerfile  create_struture.py  future_steps.md  main.py  orchestrator.py  push_to_master.sh  pyproject.toml  readme.md  relate.project.json
.github/workflows/: ci.yml
config/: __init__.py  comp_suf.yaml  config.yaml  logging.yaml  models.py
dashboard/: app.py
data_ingestion/: forum_scraper.py
financial_data/: financial_api.py  metrics.py
knowledge_graph/: kg_builder.py
outputs/2025-06-10/17-26-23/.hydra/: hydra.yaml
outputs/2025-06-10/17-28-13/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-10/17-31-12/.hydra/: hydra.yaml
outputs/2025-06-10/17-42-19/.hydra/: hydra.yaml
outputs/2025-06-10/17-42-38/.hydra/: hydra.yaml
outputs/2025-06-10/17-43-44/.hydra/: hydra.yaml
outputs/2025-06-10/17-44-20/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-10/18-06-33/.hydra/: hydra.yaml
outputs/2025-06-10/18-18-45/.hydra/: hydra.yaml
outputs/2025-06-10/18-19-34/.hydra/: hydra.yaml
preprocessing/: text_cleaning.py
rag_pipeline/: rag.py
scheduler/: job_runner.py
screening_ml/: screening.py
sentiment_analysis/: sentiment.py
summarization/: summarizer.py
tests/: test_forum_scraper.py
utils/: env.py  error_handling.py  logger.py
